@@ -76,6 +76,8 @@ Changes
     the old %-based syntax is still available but will be deprecated.
     (PR #944)
   * Analysis.rms.RMSD now confirms to standard analysis API (Issue #893)
+  * Fragments in Universe.fragment are now sorted by the index of their first
+    atom. (Issue 1007)
 
 Deprecations (Issue #599)
   * Use of rms_fit_trj deprecated in favor of AlignTraj class (Issue #845)
